--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -566,6 +566,8 @@
   "anima.ui.systemSettings.useIconLabels.hint.title": "Indica si usar iconos (por defecto) o títulos como labels para ciertos campos en diálogos y fichas.",
   "anima.ui.systemSettings.expandAbilityInputs.title": "Expandir entradas de habilidades",
   "anima.ui.systemSettings.expandAbilityInputs.hint.title": "Si está activado, las secciones de entrada de habilidades en el diálogo de combate se mostrarán siempre expandidas.",
+  "anima.ui.systemSettings.combatModifiersExpanded.title": "Expandir modificadores de combate",
+  "anima.ui.systemSettings.combatModifiersExpanded.hint.title": "Si está activado, la sección de modificadores de combate en la interfaz de combate se mostrará expandida por defecto.",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.damageResistance": "Acumulación",
   "anima.ui.tabs.domine": "Domine",
