UPDATED - System to V13 & minor updates

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -78,6 +78,7 @@
   "anima.ui.combat.baseValues.block.title": "Block",
   "anima.ui.combat.baseValues.dodge.title": "Dodge",
   "anima.ui.combat.baseValues.extraDamage.title": "Extra damage",
+  "anima.ui.combat.baseValues.damageReduction.title": "Damage Reduction",
   "anima.ui.combat.baseValues.title": "Base Values",
   "anima.ui.combat.baseValues.wearArmor.title": "Wear armor",
   "anima.ui.combat.combatSpecialSkill.title": "Special Skills",
@@ -108,6 +109,8 @@
   "anima.ui.combat.weapons.critic.secondary.title": "Critic 2",
   "anima.ui.combat.weapons.damage.base.title": "Base damage",
   "anima.ui.combat.weapons.damage.final.title": "Damage",
+  "anima.ui.combat.weapons.reducedArmor.base.title": "Base reduced armor",
+  "anima.ui.combat.weapons.reducedArmor.final.title": "Reduced armor",
   "anima.ui.combat.weapons.equipped.title": "Equipped?",
   "anima.ui.combat.weapons.hasOwnStr.title": "Own STR?",
   "anima.ui.combat.weapons.initiative.base.title": "Initiative base",
@@ -518,6 +521,11 @@
   "anima.ui.settings.advancedSettings.defenseType.title": "Defense type",
   "anima.ui.settings.advancedSettings.doubles": "Open roll with doubles",
   "anima.ui.settings.advancedSettings.fumbles.title": "Fumble Range",
+  "anima.ui.settings.advancedSettings.characteristicDie.title": "Dado de Características",
+  "anima.ui.settings.advancedSettings.initiativeDie.title": "Dado de iniciativa",
+  "anima.ui.settings.advancedSettings.resistanceDie.title": "Dado de resistencias",
+  "anima.ui.settings.advancedSettings.abilityDie.title": "Dado de habilidades",
+  "anima.ui.settings.advancedSettings.abilityMasteryDie.title": "Dado de maestría",
   "anima.ui.settings.advancedSettings.openRolls.title": "Open Roll Range",
   "anima.ui.settings.advancedSettings.title": "Advanced Settings",
   "anima.ui.settings.automationOptions.title": "Automation options",
@@ -785,6 +793,15 @@
   "macros.damageCalculator.dialog.defense.title": "Defense",
   "macros.damageCalculator.dialog.ta.title": "AT",
   "macros.damageCalculator.dialog.title": "Damage calculator",
+  "anima.permissions.modifyDiceFormulasPermission.title": "Modify dice formulas",
+  "anima.permissions.modifyDiceFormulasPermission.hint": "Allows the user to modify the dice settings used by the actors.",
   "customHotbar.damageCalculator": "Damage calculator",
-  "customHotbar.sendAttack": "Send attack"
+  "customHotbar.sendAttack": "Send attack",
+  "anima.ui.tooltips.base": "Final",
+  "anima.ui.tooltips.special": "Special",
+  "anima.ui.tooltips.final": "Final",
+  "keyBindings.damageCalculator.name": "Damage calculator",
+  "keyBindings.damageCalculator.hint": "Open damage calculator",
+  "keyBindings.sendAttack.name": "Send Attack",
+  "keyBindings.sendAttack.hint": "Send an attack request to the selected target"
 }
