--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -78,6 +78,7 @@
   "anima.ui.combat.baseValues.block.title": "Parade",
   "anima.ui.combat.baseValues.dodge.title": "Esquive",
   "anima.ui.combat.baseValues.extraDamage.title": "Dommages accrus",
+  "anima.ui.combat.baseValues.damageReduction.title": "Damage Reduction",
   "anima.ui.combat.baseValues.title": "Valeurs de Base",
   "anima.ui.combat.baseValues.wearArmor.title": "Port d'Armure",
   "anima.ui.combat.combatSpecialSkill.title": "Compétences Spéciales",
@@ -108,6 +109,8 @@
   "anima.ui.combat.weapons.critic.secondary.title": "Critique 2",
   "anima.ui.combat.weapons.damage.base.title": "Base de dégâts",
   "anima.ui.combat.weapons.damage.final.title": "Dégats",
+  "anima.ui.combat.weapons.reducedArmor.base.title": "Base reduced armor",
+  "anima.ui.combat.weapons.reducedArmor.final.title": "Reduced armor",
   "anima.ui.combat.weapons.equipped.title": "Equipé?",
   "anima.ui.combat.weapons.hasOwnStr.title": "Assez de FOR?",
   "anima.ui.combat.weapons.initiative.base.title": "Base Initiative",
@@ -488,6 +491,11 @@
   "anima.ui.settings.advancedSettings.defenseType.title": "Type de défense",
   "anima.ui.settings.advancedSettings.doubles": "Ouverte avec des doubles",
   "anima.ui.settings.advancedSettings.fumbles.title": "Marge de Fumble",
+  "anima.ui.settings.advancedSettings.characteristicDie.title": "Dado de Características",
+  "anima.ui.settings.advancedSettings.initiativeDie.title": "Dado de iniciativa",
+  "anima.ui.settings.advancedSettings.resistanceDie.title": "Dado de resistencias",
+  "anima.ui.settings.advancedSettings.abilityDie.title": "Dado de habilidades",
+  "anima.ui.settings.advancedSettings.abilityMasteryDie.title": "Dado de maestría",
   "anima.ui.settings.advancedSettings.openRolls.title": "Marge d'ouverte",
   "anima.ui.settings.advancedSettings.title": "Paramètres avancés",
   "anima.ui.settings.automationOptions.title": "Automation options",
@@ -669,6 +677,15 @@
   "macros.damageCalculator.dialog.defense.title": "Défense",
   "macros.damageCalculator.dialog.ta.title": "IP",
   "macros.damageCalculator.dialog.title": "Calculateur de dégâts",
+  "anima.permissions.modifyDiceFormulasPermission.title": "Modify dice formulas",
+  "anima.permissions.modifyDiceFormulasPermission.hint": "Allows the user to modify the dice settings used by the actors.",
   "customHotbar.damageCalculator": "Damage calculator",
-  "customHotbar.sendAttack": "Send attack"
+  "customHotbar.sendAttack": "Send attack",
+  "anima.ui.tooltips.base": "Final",
+  "anima.ui.tooltips.special": "Special",
+  "anima.ui.tooltips.final": "Final",
+  "keyBindings.damageCalculator.name": "Damage calculator",
+  "keyBindings.damageCalculator.hint": "Open damage calculator",
+  "keyBindings.sendAttack.name": "Send Attack",
+  "keyBindings.sendAttack.hint": "Send an attack request to the selected target"
 }
