--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -78,6 +78,7 @@
   "anima.ui.combat.baseValues.block.title": "Parada",
   "anima.ui.combat.baseValues.dodge.title": "Esquiva",
   "anima.ui.combat.baseValues.extraDamage.title": "Daño extra",
+  "anima.ui.combat.baseValues.damageReduction.title": "Daño reducido",
   "anima.ui.combat.baseValues.title": "Valores base",
   "anima.ui.combat.baseValues.wearArmor.title": "Llevar armadura",
   "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
@@ -108,6 +109,8 @@
   "anima.ui.combat.weapons.critic.secondary.title": "Crítico 2",
   "anima.ui.combat.weapons.damage.base.title": "Daño base",
   "anima.ui.combat.weapons.damage.final.title": "Daño",
+  "anima.ui.combat.weapons.reducedArmor.base.title": "Reducción de armadura base",
+  "anima.ui.combat.weapons.reducedArmor.final.title": "Reducción de armadura",
   "anima.ui.combat.weapons.equipped.title": "¿Equipada?",
   "anima.ui.combat.weapons.hasOwnStr.title": "¿FUE propio?",
   "anima.ui.combat.weapons.initiative.base.title": "Turno base",
@@ -519,6 +522,11 @@
   "anima.ui.settings.advancedSettings.defenseType.title": "Tipo de defensa",
   "anima.ui.settings.advancedSettings.doubles": "Abierta con dobles",
   "anima.ui.settings.advancedSettings.fumbles.title": "Rango de Pifia",
+  "anima.ui.settings.advancedSettings.characteristicDie.title": "Dado de Características",
+  "anima.ui.settings.advancedSettings.initiativeDie.title": "Dado de iniciativa",
+  "anima.ui.settings.advancedSettings.resistanceDie.title": "Dado de resistencias",
+  "anima.ui.settings.advancedSettings.abilityDie.title": "Dado de habilidades",
+  "anima.ui.settings.advancedSettings.abilityMasteryDie.title": "Dado de maestría",
   "anima.ui.settings.advancedSettings.openRolls.title": "Rango de Abierta",
   "anima.ui.settings.advancedSettings.title": "Opciones avanzadas",
   "anima.ui.settings.automationOptions.title": "Opciones de automatización",
@@ -787,6 +795,15 @@
   "macros.damageCalculator.dialog.defense.title": "Defensa",
   "macros.damageCalculator.dialog.ta.title": "TA",
   "macros.damageCalculator.dialog.title": "Calculadora de daño",
+  "anima.permissions.modifyDiceFormulasPermission.title": "Modificar formulas de dados",
+  "anima.permissions.modifyDiceFormulasPermission.hint": "Permite al usuario cambiar las fórmulas de dados usadas por los actores.",
   "customHotbar.damageCalculator": "Calculadora de daño",
-  "customHotbar.sendAttack": "Enviar ataque"
+  "customHotbar.sendAttack": "Enviar ataque",
+  "anima.ui.tooltips.base": "Final",
+  "anima.ui.tooltips.special": "Especial",
+  "anima.ui.tooltips.final": "Final",
+  "keyBindings.damageCalculator.name": "Calculadora de daño",
+  "keyBindings.damageCalculator.hint": "Abre la calculadora de daño.",
+  "keyBindings.sendAttack.name": "Enviar ataque",
+  "keyBindings.sendAttack.hint": "Envía una petición de ataque al objetivo seleccionado."
 }
