WIP - Chat based combat

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -136,6 +136,8 @@
   "anima.ui.combat.weapons.strRequired.twoHands.title": "2M FUE req.",
   "anima.ui.combat.weapons.title": "Armas",
   "anima.ui.combat.weapons.weaponStrength.title": "FUE Arma",
+  "anima.ui.combat.weapons.attackButton.title": "Atacar",
+  "anima.ui.combat.weapons.defaultAttackButton.title": "Mandar Ataque sin configurar",
   "anima.ui.combat.supernaturalShields.origin.title": "Origen",
   "anima.ui.combat.supernaturalShields.shieldPoints.title": "Puntos de vida",
   "anima.ui.combat.supernaturalShields.name.title": "Escudo",
@@ -565,7 +567,7 @@
   "anima.ui.tabs.psychic": "Psíquico",
   "anima.ui.tabs.secondaries": "Secundarias",
   "anima.ui.titleSection.title": "Títulos",
-  "anima.ui.weapons.different.title": "Diferente / Desarmado",
+  "anima.ui.weapons.different.title": "Distinta / Desarmado",
   "anima.ui.weapons.known.title": "Conocida",
   "anima.ui.weapons.mixed.title": "Mixta",
   "anima.ui.weapons.one-handed.title": "A una mano",
@@ -574,6 +576,7 @@
   "chat.combatResult.counter.title": "{defender} puede contrarrestar con un bono de <b>{bonus}</b> puntos",
   "chat.combatResult.damage.title": "{defender} recibe <b>{damage}</b> puntos de daño",
   "chat.combatResult.title": "Resultado del combate",
+  "chat.attackData.title": "Ataque",
   "contextualMenu.common.options.delete": "Eliminar",
   "contextualMenu.common.options.edit": "Editar",
   "contextualMenu.elan.options.addPower": "Añadir poder",
@@ -805,5 +808,48 @@
   "keyBindings.damageCalculator.name": "Calculadora de daño",
   "keyBindings.damageCalculator.hint": "Abre la calculadora de daño.",
   "keyBindings.sendAttack.name": "Enviar ataque",
-  "keyBindings.sendAttack.hint": "Envía una petición de ataque al objetivo seleccionado."
+  "keyBindings.sendAttack.hint": "Envía una petición de ataque al objetivo seleccionado.",
+  "chat.attackData.autoDefendButton": "Defensa automática",
+  "chat.attackData.autoDefendPendingButton": "Defensas faltantes",
+  "chat.attackData.defendButton": "Defensa",
+  "chat.multiDefenseResult.title": "Defensa Automática",
+  "chat.multiDefenseResult.fromAttack": "Desde ataque",
+  "chat.multiDefenseResult.defense": "Defensa",
+  "chat.multiDefenseResult.counter": "Contraataque",
+  "chat.multiDefenseResult.damage": "Daño",
+  "chat.result.applyFull": "x1",
+  "chat.result.applyHalf": "x0.5",
+  "chat.result.applyDouble": "x2",
+  "chat.multiDefenseResult.applyRemaining": "Aplicar a los restantes",
+  "chat.multiDefenseResult.appliedBy": "Aplicado por",
+  "chat.common.msgNotFound": "Mensaje no encontrado.",
+  "chat.defend.noAttackData": "Datos de ataque no disponibles.",
+  "chat.defend.multiSelectedNotSupported": "Esta opción no contempla defenderse con varios actores a la vez. Selecciona solo uno.",
+  "chat.defend.pickAToken": "Selecciona un token válido para defender.",
+  "chat.defend.noPermission": "No tienes permisos para defender con ese token.",
+  "chat.defend.openFailed": "No se pudo abrir la defensa.",
+
+  "chat.defense.autoRollFlavor.block": "Defensa automática — Bloqueo",
+  "chat.defense.autoRollFlavor.dodge": "Defensa automática — Esquiva",
+
+  "chat.result.confirmTitle": "¿Aplicar el daño de nuevo?",
+  "chat.result.confirmBody": "Este resultado ya aplicó daño antes. ¿Seguro?",
+  "chat.result.points": "puntos",
+  "chat.combatResult.difference": "Diferencia",
+  "chat.combatResult.counterAttackValue": "Valor de contraataque",
+  "chat.combatResult.finalDamage": "Daño final",
+  "chat.combatResult.lifePercentRemoved": "Porcentaje de vida perdido",
+  "chat.combatResult.isCritical": "¿Es crítico?",
+  "chat.combatResult.yes": "Sí",
+  "chat.combatResult.no": "No",
+  "chat.combatResult.baseCriticalValue": "Valor crítico base",
+
+  "chat.attackData.noTargets": "(Sin objetivos en este ataque)",
+  "chat.attackData.rollingBy": "Tirando: {name}",
+  "chat.attackData.state.pending": "pendiente",
+  "chat.attackData.state.rolling": "tirando",
+  "chat.attackData.state.done": "resuelto",
+  "chat.attackData.state.expired": "expirado",
+
+  "chat.common.target": "Objetivo"
 }
