--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -136,6 +136,8 @@
   "anima.ui.combat.weapons.strRequired.twoHands.title": "2H STR req.",
   "anima.ui.combat.weapons.title": "Weapons",
   "anima.ui.combat.weapons.weaponStrength.title": "Weapon STR",
+  "anima.ui.combat.weapons.attackButton.title": "Attack",
+  "anima.ui.combat.weapons.defaultAttackButton.title": "Default Attack",
   "anima.ui.combat.supernaturalShields.origin.title": "Origin",
   "anima.ui.combat.supernaturalShields.shieldPoints.title": "Life points",
   "anima.ui.combat.supernaturalShields.name.title": "Shield",
@@ -571,6 +573,7 @@
   "chat.combatResult.counter.title": "{defender} can counterattack with <b>{bonus}</b> of bonus",
   "chat.combatResult.damage.title": "{defender} takes <b>{damage}</b> damage points",
   "chat.combatResult.title": "Combat result",
+  "chat.attackData.title": "Attack",
   "contextualMenu.common.options.delete": "Delete",
   "contextualMenu.common.options.edit": "Edit",
   "contextualMenu.elan.options.addPower": "Add power",
@@ -803,5 +806,49 @@
   "keyBindings.damageCalculator.name": "Damage calculator",
   "keyBindings.damageCalculator.hint": "Open damage calculator",
   "keyBindings.sendAttack.name": "Send Attack",
-  "keyBindings.sendAttack.hint": "Send an attack request to the selected target"
+  "keyBindings.sendAttack.hint": "Send an attack request to the selected target",
+  "chat.attackData.autoDefendButton": "Auto defend",
+  "chat.attackData.defendButton": "Defend",
+  "chat.multiDefenseResult.title": "Automatic Defenses",
+  "chat.multiDefenseResult.fromAttack": "From attack",
+  "chat.multiDefenseResult.defense": "Defense",
+  "chat.multiDefenseResult.counter": "Counterattack",
+  "chat.multiDefenseResult.damage": "Damage",
+  "chat.result.applyFull": "x1",
+  "chat.result.applyHalf": "x0.5",
+  "chat.result.applyDouble": "x2",
+  "chat.multiDefenseResult.applyRemaining": "Apply to remaining",
+  "chat.multiDefenseResult.appliedBy": "Applied by",
+  "chat.attackData.autoDefendPendingButton": "Auto defend (pending)",
+
+  "chat.defense.autoRollFlavor.block": "Auto defense — Block",
+  "chat.defense.autoRollFlavor.dodge": "Auto defense — Dodge",
+
+  "chat.common.msgNotFound": "Message not found.",
+  "chat.defend.noAttackData": "Attack data missing.",
+  "chat.defend.multiSelectedNotSupported": "This option does not support defending with multiple selected tokens.",
+  "chat.defend.pickAToken": "Select a token you control.",
+  "chat.defend.noPermission": "You don't have permission to defend for this actor.",
+  "chat.defend.openFailed": "Could not open defense dialog.",
+
+  "chat.result.confirmTitle": "Apply damage again?",
+  "chat.result.confirmBody": "This result already applied damage before. Are you sure?",
+  "chat.result.points": "points",
+  "chat.combatResult.difference": "Difference",
+  "chat.combatResult.counterAttackValue": "Counterattack Value",
+  "chat.combatResult.finalDamage": "Final Damage",
+  "chat.combatResult.lifePercentRemoved": "Life % Removed",
+  "chat.combatResult.isCritical": "Is Critical?",
+  "chat.combatResult.yes": "Yes",
+  "chat.combatResult.no": "No",
+  "chat.combatResult.baseCriticalValue": "Base Critical Value",
+
+  "chat.attackData.noTargets": "(No targets in this attack)",
+  "chat.attackData.rollingBy": "Rolling: {name}",
+  "chat.attackData.state.pending": "pending",
+  "chat.attackData.state.rolling": "rolling",
+  "chat.attackData.state.done": "done",
+  "chat.attackData.state.expired": "expired",
+
+  "chat.common.target": "Target"
 }
