feat: Implemented a new spell maintenance tracking with cost calculations in Character sheet

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -298,7 +298,11 @@
   "anima.ui.mystic.preparedSpells.title": "Prepared spells",
   "anima.ui.mystic.selectedSpells.cost.title": "Cost",
   "anima.ui.mystic.selectedSpells.name.title": "Spell",
-  "anima.ui.mystic.selectedSpells.title": "Selected spells",
+  "anima.ui.mystic.selectedSpells.title": "Maintained Spells (per turn)",
+  "anima.ui.mystic.maintainedSpells.cost.title": "Cost",
+  "anima.ui.mystic.maintainedSpells.name.title": "Spell",
+  "anima.ui.mystic.maintainedSpells.title": "Maintained Spells (per turn)",
+  "anima.ui.mystic.maintainedSpells.totalPerTurn.title": "Total per turn:",
   "anima.ui.mystic.spell.combatType.none.title": "-",
   "anima.ui.mystic.spell.combatType.attack.title": "Attack",
   "anima.ui.mystic.spell.combatType.defense.title": "Defense",
