--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -300,7 +300,11 @@
   "anima.ui.mystic.preparedSpells.title": "Conjuros preparados",
   "anima.ui.mystic.selectedSpells.cost.title": "Coste",
   "anima.ui.mystic.selectedSpells.name.title": "Conjuro",
-  "anima.ui.mystic.selectedSpells.title": "Conjuros seleccionados",
+  "anima.ui.mystic.selectedSpells.title": "Hechizos Mantenidos (por turno)",
+  "anima.ui.mystic.maintainedSpells.cost.title": "Coste",
+  "anima.ui.mystic.maintainedSpells.name.title": "Conjuro",
+  "anima.ui.mystic.maintainedSpells.title": "Hechizos Mantenidos (por turno)",
+  "anima.ui.mystic.maintainedSpells.totalPerTurn.title": "Total por turno:",
   "anima.ui.mystic.spell.combatType.none.title": "-",
   "anima.ui.mystic.spell.combatType.attack.title": "Ataque",
   "anima.ui.mystic.spell.combatType.defense.title": "Defensa",
