--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -290,7 +290,11 @@
   "anima.ui.mystic.metamagic.title": "Métamagies",
   "anima.ui.mystic.selectedSpells.cost.title": "Coût",
   "anima.ui.mystic.selectedSpells.name.title": "Sort",
-  "anima.ui.mystic.selectedSpells.title": "Sorts sélectionnés",
+  "anima.ui.mystic.selectedSpells.title": "Sorts Maintenus (par tour)",
+  "anima.ui.mystic.maintainedSpells.cost.title": "Coût",
+  "anima.ui.mystic.maintainedSpells.name.title": "Sort",
+  "anima.ui.mystic.maintainedSpells.title": "Sorts Maintenus (par tour)",
+  "anima.ui.mystic.maintainedSpells.totalPerTurn.title": "Total par tour:",
   "anima.ui.mystic.spell.actionType.active.title": "Active",
   "anima.ui.mystic.spell.actionType.passive.title": "Passive",
   "anima.ui.mystic.spell.actionType.title": "Action",
