ADD - Damage formula for weapons

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -113,6 +113,9 @@
   "anima.ui.combat.weapons.reducedArmor.final.title": "Reduced armor",
   "anima.ui.combat.weapons.equipped.title": "Equipped?",
   "anima.ui.combat.weapons.hasOwnStr.title": "Own STR?",
+  "anima.ui.combat.weapons.damage.formula.title": "Damage Formula",
+  "anima.ui.combat.weapons.damage.applyQualityInFormula.title": "Add quality damage",
+  "anima.ui.combat.weapons.useFormula.title": "Use custom formula",
   "anima.ui.combat.weapons.initiative.base.title": "Initiative base",
   "anima.ui.combat.weapons.initiative.final.title": "Initiative",
   "anima.ui.combat.weapons.integrity.base.title": "Base integrity",
