--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -113,6 +113,9 @@
   "anima.ui.combat.weapons.reducedArmor.final.title": "Reducción de armadura",
   "anima.ui.combat.weapons.equipped.title": "¿Equipada?",
   "anima.ui.combat.weapons.hasOwnStr.title": "¿FUE propio?",
+  "anima.ui.combat.weapons.damage.formula.title": "Fórmula Daño",
+  "anima.ui.combat.weapons.damage.applyQualityInFormula.title": "Sumar daño de calidad",
+  "anima.ui.combat.weapons.useFormula.title": "Usar fórmula personalizada",
   "anima.ui.combat.weapons.initiative.base.title": "Turno base",
   "anima.ui.combat.weapons.initiative.final.title": "Turno",
   "anima.ui.combat.weapons.integrity.base.title": "Entereza base",
