--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -115,6 +115,9 @@
   "anima.ui.combat.weapons.defaultAttackButton.title": "Attaque par défaut",
   "anima.ui.combat.weapons.equipped.title": "Equipé?",
   "anima.ui.combat.weapons.hasOwnStr.title": "Assez de FOR?",
+  "anima.ui.combat.weapons.damage.formula.title": "Damage Formula",
+  "anima.ui.combat.weapons.damage.applyQualityInFormula.title": "Add quality damage",
+  "anima.ui.combat.weapons.useFormula.title": "Use custom formula",
   "anima.ui.combat.weapons.initiative.base.title": "Base Initiative",
   "anima.ui.combat.weapons.initiative.final.title": "Initiative",
   "anima.ui.combat.weapons.integrity.base.title": "Base Solidité",
