--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -633,6 +633,7 @@
   "dialogs.items.technique.content": "Technique name",
   "dialogs.items.title.content": "Title name",
   "dialogs.items.weapons.content": "Weapon name",
+  "anima.ui.effects.effectsList.newEffectDialog.content": "Effect name",
   "dialogs.mod.content": "Modifier",
   "dialogs.newSupernaturalShield.title": "New Supernatural Shield",
   "dialogs.psychicShield.difficulty.special": "Dice Roll",
