ADD - Characteristics as types & modifier applying order

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -461,6 +461,7 @@
   "anima.ui.resistances.poison": "Poison",
   "anima.ui.resistances.psychic": "Psychic",
   "anima.ui.resistances.title": "Resistances",
+  "anima.ui.characteristics.title": "Characteristics",
   "anima.ui.secondaries.acrobatics.title": "Acrobatics",
   "anima.ui.secondaries.alchemy.title": "Alchemy",
   "anima.ui.secondaries.animals.title": "Animals",
@@ -819,6 +820,7 @@
   "anima.ui.tooltips.base": "Final",
   "anima.ui.tooltips.special": "Special",
   "anima.ui.tooltips.final": "Final",
+  "anima.ui.tooltips.mod": "Modifier",
   "keyBindings.damageCalculator.name": "Damage calculator",
   "keyBindings.damageCalculator.hint": "Open damage calculator",
   "keyBindings.sendAttack.name": "Send Attack",
