--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -463,6 +463,7 @@
   "anima.ui.resistances.poison": "Venenos",
   "anima.ui.resistances.psychic": "Psíquica",
   "anima.ui.resistances.title": "Resistencias",
+  "anima.ui.characteristics.title": "Características",
   "anima.ui.secondaries.acrobatics.title": "Acrobacias",
   "anima.ui.secondaries.alchemy.title": "Alquimia",
   "anima.ui.secondaries.animals.title": "Animales",
@@ -821,6 +822,7 @@
   "anima.ui.tooltips.base": "Final",
   "anima.ui.tooltips.special": "Especial",
   "anima.ui.tooltips.final": "Final",
+  "anima.ui.tooltips.mod": "Modificador",
   "keyBindings.damageCalculator.name": "Calculadora de daño",
   "keyBindings.damageCalculator.hint": "Abre la calculadora de daño.",
   "keyBindings.sendAttack.name": "Enviar ataque",
