--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -434,6 +434,7 @@
   "anima.ui.resistances.poison": "Poisons",
   "anima.ui.resistances.psychic": "Psychique",
   "anima.ui.resistances.title": "Résistances",
+  "anima.ui.characteristics.title": "Characteristics",
   "anima.ui.secondaries.acrobatics.title": "Acrobaties",
   "anima.ui.secondaries.alchemy.title": "Alchimie",
   "anima.ui.secondaries.animals.title": "Animaux",
@@ -539,6 +540,7 @@
   "anima.ui.tooltips.base": "Final",
   "anima.ui.tooltips.final": "Final",
   "anima.ui.tooltips.special": "Spécial",
+  "anima.ui.tooltips.mod": "Modifier",
   "anima.ui.weapons.different.title": "Différent / Mains nues",
   "anima.ui.weapons.known.title": "Connu",
   "anima.ui.weapons.mixed.title": "1 ou 2 mains",
